--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "query-string": "^5.0.1"
   },
   "devDependencies": {
+    "@types/query-string": "^5.1.0",
+    "@types/react": "^16.3.16",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -60,12 +62,15 @@
     "eslint": "^4.6.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.3.0",
+    "react": "^16.4.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.49.3",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-typescript2": "^0.14.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "typescript": "^2.9.1"
   }
 }
