--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c",
     "clean": "rimraf lib dist es",
     "lint": "eslint src",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prerelease": "npm run lint && npm run build",
+    "release": "yarn np"
   },
   "repository": {
     "type": "git",
@@ -59,6 +60,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.9.1",
+    "np": "^3.0.4",
     "react": "^16.4.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.60.1",
