--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "name": "reimgix",
-  "version": "0.1.0",
-  "description": "Get all the benefits of using React",
+  "version": "1.0.0-beta.0",
+  "description": "React utils to imgix",
   "author": "Renato Ribeiro (http://github.com/renatorib)",
   "license": "MIT",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
   "browser": "dist/reimgix.min.js",
   "scripts": {
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "build:umd": "cross-env BABEL_ENV=rollup NODE_ENV=development rollup -c -o dist/reimgix.js",
-    "build:umd:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c -o dist/reimgix.min.js",
-    "build:all": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "build": "npm run clean && npm run build:all",
+    "build": "cross-env BABEL_ENV=rollup NODE_ENV=development rollup -c",
+    "build:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c",
     "clean": "rimraf lib dist es",
     "lint": "eslint src",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prerelease": "npm run lint && npm run build",
+    "release": "yarn np"
   },
   "repository": {
     "type": "git",
@@ -45,27 +43,33 @@
   },
   "homepage": "https://github.com/renatorib/reimgix",
   "dependencies": {
-    "query-string": "^5.0.1"
+    "query-string": "^6.1.0"
   },
   "devDependencies": {
+    "@types/query-string": "^5.1.0",
+    "@types/react": "^16.3.17",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "eslint": "^4.6.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-react": "^7.3.0",
+    "cross-env": "^5.1.6",
+    "eslint": "^4.19.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.9.1",
+    "np": "^3.0.4",
+    "react": "^16.4.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.49.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup": "^0.60.1",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-terser": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.14.0",
+    "typescript": "^2.9.1"
   }
 }
