--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reimgix",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0",
   "description": "React utils to imgix",
   "author": "Renato Ribeiro (http://github.com/renatorib)",
   "license": "MIT",
