fix: build and release

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "React utils to imgix",
   "author": "Renato Ribeiro (http://github.com/renatorib)",
   "license": "MIT",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "module": "es/index.js",
-  "jsnext:main": "es/index.js",
+  "main": "lib/reimgix.js",
+  "types": "lib/reimgix.d.ts",
+  "module": "es/reimgix.js",
+  "jsnext:main": "es/reimgix.js",
   "browser": "dist/reimgix.min.js",
+  "typings": "dist/src/index.d.ts",
   "scripts": {
     "build": "cross-env BABEL_ENV=rollup NODE_ENV=development rollup -c",
     "build:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c",
