--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "React utils to imgix",
   "author": "Renato Ribeiro (http://github.com/renatorib)",
   "license": "MIT",
-  "main": "lib/reimgix.js",
-  "types": "lib/reimgix.d.ts",
-  "module": "es/reimgix.js",
-  "jsnext:main": "es/reimgix.js",
-  "browser": "dist/reimgix.min.js",
+  "main": "dist/index.js",
+  "umd:main": "dist/index.umd.js",
+  "module": "dist/index.m.js",
+  "source": "src/index.ts",
   "typings": "dist/src/index.d.ts",
   "scripts": {
-    "build": "cross-env BABEL_ENV=rollup NODE_ENV=development rollup -c",
-    "build:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c",
+    "dev": "libundler watch --ts",
+    "build": "libundler build --ts --c --sm",
     "clean": "rimraf lib dist es",
     "lint": "eslint src",
     "prerelease": "npm run lint && npm run build",
@@ -46,31 +45,20 @@
   "dependencies": {
     "query-string": "^6.1.0"
   },
+  "peerDependencies": {
+    "react": "^16.4.0"
+  },
   "devDependencies": {
     "@types/query-string": "^5.1.0",
     "@types/react": "^16.3.17",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.1.6",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.9.1",
+    "libundler": "^1.7.1",
     "np": "^3.0.4",
     "react": "^16.4.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.60.1",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.14.0",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.2"
   }
 }
