--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reimgix",
+  "name": "@onemarket/reimgix",
   "version": "1.0.2",
   "description": "React utils to imgix",
   "author": "Renato Ribeiro (http://github.com/renatorib)",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/renatorib/reimgix.git"
+    "url": "https://github.com/one-market/reimgix.git"
   },
   "files": [
     "dist",
@@ -39,9 +39,9 @@
     "renderless-component"
   ],
   "bugs": {
-    "url": "https://github.com/renatorib/reimgix/issues"
+    "url": "https://github.com/one-market/reimgix/issues"
   },
-  "homepage": "https://github.com/renatorib/reimgix",
+  "homepage": "https://github.com/one-market/reimgix",
   "dependencies": {
     "query-string": "^6.1.0"
   },
